Replace pire replique / TODO sizedCache , more testing